--- a/TMS/TMS/Views/KnowledgeBase/Detail.cshtml
+++ b/TMS/TMS/Views/KnowledgeBase/Detail.cshtml
@@ -1,21 +1,126 @@
-﻿@{
+﻿@model TMS.ViewModels.KnowledgeBaseViewModels
+@{
     Layout = "~/Views/Shared/KBLayout.cshtml";
+    var relatedSolution = ViewBag.relatedSolution;
 }
+@using TMS.Models;
+<link rel="stylesheet" href="~/Content/Plugins/jstree/style.min.css" />
+
+<style>
+    .category-item li {
+        background: none;
+    }
+
+    .subcategory-item {
+        padding-left: 20px;
+    }
+
+    .widget ul li {
+        border-bottom: none;
+    }
+
+    .jstree-anchor {
+        border: none;
+    }
+
+    .jstree-default .jstree-clicked {
+        color: #0094ff;
+        background: none !important;
+        border: none !important;
+        box-shadow: none !important;
+    }
+
+    .jstree-anchor:hover {
+        color: #0094ff;
+        background: none !important;
+        border: none !important;
+        box-shadow: none !important;
+    }
+</style>
 
 <div class="col-lg-12">
     <div class="span8 page-content">
         <article class="type-post format-standard hentry clearfix">
-            <h1 class="post-title"><a href="#">Integrating WordPress with Your Website</a></h1>
+            <h1 class="post-title"><a href="#">@Html.DisplayFor(m => m.Subject)</a></h1>
             <div class="post-meta clearfix">
-                <span class="date">25 Feb, 2013</span>
-                <span class="category"><a href="#">Server &amp; Database</a></span>
-            </div><!-- end of post meta -->
-            <p class="pre-wrap"></p>
+                <span class="date">@Html.DisplayFor(m => m.CreatedTime)</span>
+                <span class="category"><a href="#">@Html.DisplayFor(m => m.CategoryPath)</a></span>
+            </div>
+            <p class="pre-wrap">@Html.DisplayFor(m => m.Content)</p>
         </article>
     </div>
     <aside class="span4 page-sidebar">
         <section class="widget">
             <h3 class="title">Related Articles</h3>
+            <ul class="articles">
+                @foreach (Solution solution in relatedSolution)
+                {
+                    <li class="article-entry standard">
+                        <h4><a href="single.html">@solution.Subject</a></h4>
+                        <span class="article-meta">@solution.CreatedTime in <a href="#">@solution.Category.Name</a></span>
+                    </li>
+                }
+            </ul>
+        </section>
+        <section class="widget">
+            <h3 class="title">Categories</h3>
+            <div id="category-treeview-div">
+            </div>
         </section>
     </aside>
 </div>
+@section scripts {
+    <script src="~/Content/Plugins/jstree/jstree.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            showTreeViewModal();
+        });
+
+        var showTreeViewModal = function () {
+            $("#category-treeview-div").jstree({
+                "core": {
+                    "check_callback": true,
+                    "themes": {
+                        "stripes": false,
+                        "icons": false,
+                        "dots": false
+                    },
+                    "data": {
+                        "url": "/Admin/ManageSC/GetCategoryTreeViewData",
+                        "type": "GET",
+                        "contentType": "application/json; charset=utf-8",
+                        "dataFilter": function (json) {
+                            var data = $.parseJSON(json);
+                            var nodes = [];
+                            for (i = 0; i < data.data.length; i++) {
+                                var dataItem = data.data[i];
+                                var node = {
+                                    id: dataItem.ID,
+                                    parent: dataItem.ParentId == null ? "#" : dataItem.ParentId,
+                                    text: dataItem.Name,
+                                    state: {
+                                        'opened': false,
+                                        'selected': false
+                                    },
+                                    li_attr: {
+                                        "style": ""
+                                    },
+                                    a_attr: {
+                                        "data-id": dataItem.ID,
+                                        "class": "category-node"
+                                    }
+                                };
+                                nodes.push(node);
+                            }
+                            return JSON.stringify(nodes);
+                        }
+                    }
+                },
+            });
+        };
+
+        $('#category-treeview-div').on("select_node.jstree", function (e, data) {
+            data.instance.toggle_node(data.node);
+        });
+    </script>
+}
