--- a/TMS/TMS/Views/Ticket/Solve.cshtml
+++ b/TMS/TMS/Views/Ticket/Solve.cshtml
@@ -256,8 +256,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-offset-3 col-sm-9">
-                    <a id="refer-solution" href="javascript:openReferKnowledgebaseModal()">Refer knowledge base</a>
+                <div class="col-sm-12 row-content ">
+                    <div class="col-sm-12">
+                        <div class="col-sm-2">
+                        </div>
+                        <div class="col-sm-10">
+                            <a id="refer-solution" href="javascript:openReferKnowledgebaseModal()">Refer knowledge base</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-sm-12">
                     <hr />
@@ -404,7 +410,7 @@
             var messUrl = "http://tms.com/KB/1";
             $("#new-solution").html($("#new-solution").val() + '&#13' + messUrl);
             noty({
-                text: 'Link inserted!',
+                text: 'Solution\'s link is inserted!',
                 layout: "topCenter",
                 type: "success",
                 timeout: 2000
@@ -416,6 +422,10 @@
             $("#modal-refer-knowledgebase").modal("show");
             $("#search-btn").click();
         }
+
+        $("#solution-search").keyup(function(e) {
+            $("#search-btn").click();
+        });
 
         $("#solveBtn, #saveBtn")
             .on("click",
