--- a/TMS/TMS/Views/Home/Index.cshtml
+++ b/TMS/TMS/Views/Home/Index.cshtml
@@ -28,7 +28,7 @@
 
 <div class="row">
     <div class="col-xs-12">
-        <div class="box box-primary">
+        <div class="box box-solid">
             <div class="box-body">
                 <div class="col-sm-6 menu-item">
                     <a href="@(Url.Action("Create", "Ticket"))">
