--- a/TMS/TMS/Views/Shared/KBLayout.cshtml
+++ b/TMS/TMS/Views/Shared/KBLayout.cshtml
@@ -49,7 +49,7 @@
             <h3 class="search-header">Have a Question?</h3>
             <p class="search-tag-line">If you have any question you can ask below or enter what you are looking for!</p>
             <form id="search-form" class="search-form clearfix" method="get" action="#" autocomplete="off">
-                <input class="search-term required" type="text" id="s" name="s" placeholder="Type your search terms here" />
+                <input class="search-term required" type="text" id="search-solution" placeholder="Type your search terms here" />
                 <input class="search-btn" type="submit" value="Search" />
                 <div id="search-error-container"></div>
             </form>
@@ -89,5 +89,9 @@
     @RenderSection("scripts", required: false)
 </body>
 </html>
-
+@section scripts {
+    <script>
+        
+    </script>
+}
 
