--- a/TMS/TMS/Views/KnowledgeBase/Index.cshtml
+++ b/TMS/TMS/Views/KnowledgeBase/Index.cshtml
@@ -38,17 +38,17 @@
 
     .left-menu {
         padding: 0;
-        background: #188de1;
         height: 100%;
+        background: #f5f3f3;
     }
     /*remove list style (circles)*/
     .menu-collapse {
-        color: white;
+        color: #E4E4E4;
     }
     /*header line style and border*/
     .header {
-        color: #F8F8F8;
-        background-color: #085c9a;
+        color: #2c2c2c;
+        background-color: #f5f3f3;
         padding: 4px 12px;
     }
 
@@ -63,12 +63,12 @@
 
     .header-content {
         color: #666;
-        background-color: #b4d2ef;
+        background-color: #fff;
         padding: 5px 12px 4px 12px;
     }
 
     .question-row {
-        border-bottom: solid 1px #b4d2ef;
+        border-bottom: solid 1px #ccc;
         padding: 10px;
         overflow-y: auto;
     }
@@ -86,45 +86,23 @@
         padding: 8px 20px;
         display: none;
     }
-
-    .rightItems {
-        text-align: right;
-    }
-
-    .modal-title {
-        color: #ffffff;
-        text-align: center;
-    }
-
-    .modal-header {
-        background-color: #1074bd;
-    }
-
-    .modal-body {
-        background-color: #e6e6e6;
-    }
-
-    input, select, textarea {
-        max-width: 674px;
-    }
-
-    .required {
-        color: red;
-    }
-
     .jstree-node {
         margin-left: 0px !important;
         padding-left: 12px !important;
     }
 
+    .jstree-anchor, .jstree-anchor:link, .jstree-anchor:visited, .jstree-anchor:hover, .jstree-anchor:active {
+        color: #2c2c2c;
+    }
+
     .jstree-icon {
-        display: none !important;
+        /*display: none !important;*/
     }
 
     li[aria-level="1"] > .jstree-children {
-        background-color: #5aa4d9;
-        margin-left: -12px !important;
-        padding-left: 12px !important;
+        background-color: #E4E4E4;
+        margin-left: -15px !important;
+        padding-left: 20px !important;
     }
 
     .jstree-default .jstree-anchor {
@@ -141,11 +119,17 @@
     }
 
     .jstree-clicked {
-        background: #085c9a !important;
+        color: #fff !important;
+        background: #b6b2b2 !important;
+    }
+
+    .button {
+        text-align: right;
     }
 
     .jstree-anchor:hover {
-        background: #085c9a;
+        color: #fff;
+        background: #b6b2b2;
     }
 </style>
 
@@ -161,7 +145,9 @@
             <div class="questions col-md-9">
                 <div class="header-content col-md-12">
                     <div class="col-md-6">
-                        <a class="btn btn-primary btn-flat" href="/KnowledgeBase/CreateKB">New solution</a>
+                        <a class="btn btn-primary btn-flat" href="/KnowledgeBase/CreateKB">
+                            <i class="fa fa-plus" aria-hidden="true"></i>&nbsp;&nbsp; New solution
+                        </a>
                         <a class="btn btn-default btn-flat" href="#"><i class="fa fa-trash"></i></a>
                     </div>
                     <div class="box-tools pull-right col-md-4" style="">
@@ -286,11 +272,18 @@
                         $(".question-list").append("<div class='col-sm-12' style='text-align:center'><p>There is no solution to display. </p></div>");
                     } else {
                         for (i = 0; i < data.data.length; i++) {
+                            var content = data.data[i].Content;
+                            content = $.truncate(content, {
+                                length: 350,
+                            });
+                            
                             $(".question-list").append(
-                                '<div class="question-row"><div class="question-header col-sm-11"><input type="checkbox" />'
+                                '<div class="question-row"><div class="question-header col-sm-10"><input type="checkbox" />'
                                 + '<a class="question-title" href="#"> ' + data.data[i].Subject + '</a></div>'
-                                + '<div class="col-sm-1"><a class="btn-sm btn-primary" href="/KnowledgeBase/Edit/' + data.data[i].ID + '"><i class="fa fa-pencil"></i></a></div>'
-                                + '<div class="question-detail col-sm-12"><p class="pre-wrap">' + data.data[i].Content + '</p>'
+                                + '<div class="col-sm-2 button"><a class="btn-sm btn-success" href="/KnowledgeBase/Detail/' + data.data[i].ID + '"><i class="fa fa-eye"></i></a>'
+                                + '&nbsp;&nbsp;<a class="btn-sm btn-primary" href="/KnowledgeBase/Edit/' + data.data[i].ID + '"><i class="fa fa-pencil"></i></a></div>'
+                                + '<div class="question-detail col-sm-12">' + content
+                                + '<a href="/KnowledgeBase/Detail/' + data.data[i].ID + '">...Continue Reading</a>'
                                 + '<p><i>Keyword: ' + data.data[i].Keyword + '</i></p></div></div>');
                         }
                     }
@@ -320,11 +313,17 @@
                         $(".question-list").append("<div class='col-sm-12' style='text-align:center'><p>There is no solution to display. </p></div>");
                     } else {
                         for (i = 0; i < data.data.length; i++) {
+                            var content = data.data[i].Content;
+                            content = $.truncate(content, {
+                                length: 350,
+                            });
                             $(".question-list").append(
-                                '<div class="question-row"><div class="question-header col-sm-11"><input type="checkbox" />'
+                                '<div class="question-row"><div class="question-header col-sm-10"><input type="checkbox" />'
                                 + '<a class="question-title" href="#"> ' + data.data[i].Subject + '</a></div>'
-                                + '<div class="col-sm-1"><a class="btn-sm btn-primary" href="/KnowledgeBase/Edit/' + data.data[i].ID + '"><i class="fa fa-pencil"></i></a></div>'
-                                + '<div class="question-detail col-sm-12"><p class="pre-wrap">' + data.data[i].Content + '</p>'
+                                + '<div class="col-sm-2 button"><a class="btn-sm btn-success" href="/KnowledgeBase/Detail/' + data.data[i].ID + '"><i class="fa fa-eye"></i></a>'
+                                + '&nbsp;&nbsp;<a class="btn-sm btn-primary" href="/KnowledgeBase/Edit/' + data.data[i].ID + '"><i class="fa fa-pencil"></i></a></div>'
+                                + '<div class="question-detail col-sm-12">' + content
+                                + '<a href="/KnowledgeBase/Detail/' + data.data[i].ID + '">...Continue Reading</a>'
                                 + '<p><i>Keyword: ' + data.data[i].Keyword + '</i></p></div></div>');
                         }
                     }
