--- a/TMS/TMS/Areas/Admin/Views/ManageUser/CreateManager.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageUser/CreateManager.cshtml
@@ -1,16 +1,16 @@
-﻿@model TMS.ViewModels.TechnicianRegisterViewModel
+﻿@model TMS.ViewModels.ManagerRegisterViewModel
 @{
-    ViewBag.Title = "Manage Technicians";
+    ViewBag.Title = "Manage Managers";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 @Styles.Render("~/Content/admin_css")
-@using (Html.BeginForm("CreateTechnician", "ManageUser", FormMethod.Post, new { @class = "form-horizontal", role = "form", area = "Admin", enctype = "multipart/form-data" }))
+@using (Html.BeginForm("CreateManager", "ManageUser", FormMethod.Post, new { @class = "form-horizontal", role = "form", area = "Admin", enctype = "multipart/form-data" }))
 {
     <div class="row" style="overflow: hidden">
         <div class="col-xs-8">
             <div class="box box-primary">
                 <div class="box-header with-border">
-                    <h4 class="box-title">EDIT TECHNICIAN</h4>
+                    <h4 class="box-title">CREATE MANAGER</h4>
                 </div>
                 <div class="box-body">
                     @Html.AntiForgeryToken()
@@ -66,16 +66,9 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-3 control-label">Department&nbsp;<span style="color: red">*</span></label>
-                        <div class="col-sm-9">
-                            @Html.DropDownListFor(m => m.DepartmentID, (SelectList) ViewBag.departmentList, "--Choose department--", new { @class = "form-control" })
-                            @Html.ValidationMessageFor(m => m.DepartmentID, "", new { @class = "text-danger" })                        
-                        </div>
-                    </div>
-                    <div class="form-group">
                         <div class="col-sm-offset-3 col-sm-9">
                             <input type="submit" class="btn btn-success" value="Save" />
-                            @Html.ActionLink("Cancel", "Technician", null, new { @class = "btn btn-default" })
+                            @Html.ActionLink("Cancel", "Manager", null, new { @class = "btn btn-default" })
                         </div>
                     </div>
                 </div>
