--- a/TMS/TMS/Areas/HelpDesk/Views/Report/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/Report/Index.cshtml
@@ -1,33 +1,21 @@
-﻿@using Microsoft.Ajax.Utilities
-@{
+﻿@{
     Layout = "~/Areas/HelpDesk/Views/Shared/_Layout.cshtml";
     //ViewBag.Title = "Ticket Management";
 }
-
-<style>
-    .graph {
-        width: 300px;
-    }
-
-    #doughnut-legend {
-        margin-top: 20px;
-    }
-
-        #doughnut-legend li {
-            display: inline-block;
-            font-size: 20px;
-            margin-right: 20px;
+<style type="text/css">
+    /*@@media print {
+        body * {
+          display: none;
         }
 
-            #doughnut-legend li span {
-                display: inline-block;
-                width: 12px;
-                height: 12px;
-                margin-right: 5px;
-            }
+        body .printable {
+          display: block;
+        }
+      }*/
 </style>
+<link rel="stylesheet" href="~/Content/css/graph.css" />
 
-<div class="row">
+<div class="row" id="graph-condition-div">
     <div class="col-xs-8">
         <div class="box box-primary">
             <div class="box-body" id="draw-graph">
@@ -88,7 +76,7 @@
                     <!--Button Generate Report-->
                     <div class="form-group">
                         <div class="col-sm-offset-4">
-                            <button id="btnExport">Export Report</button>
+                            <button onclick="exportReport()">Export Report</button>
                         </div>
                     </div>
                 </div>
@@ -97,7 +85,7 @@
     </div>
 </div>
 
-<div class="col-xs-12">
+<div class="col-xs-12" id="data-div">
     <div class="box box-primary">
         <!-- /.box-header -->
         <div class="box-body">
@@ -128,9 +116,14 @@
     </div>
     <!-- /.box -->
 </div>
+<div class="modal" id="loading-modal">
+    <img src="~/Content/img/ajax-loader.gif" />
+</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/chart")
+    <script src="~/Content/js/html2canvas.js"></script>
+    <script src="~/Content/js/printThis.js"></script>
     <script>
         var defaultColors = [
             "#FF6384", "#36A2EB", "#FFCE56", "#f0f8ff", "#a4c639", "#8db600", "#ff9966", "#007fff", "#fae7b5",
@@ -408,5 +401,40 @@
         $(document).ready(function () {
             ProcessGraph();
         });
+
+        var exportReport = function () {
+            var graph_condition_div = document.getElementById("graph-condition-div");
+            var data_div = document.getElementById("data-div");
+            $("#loading-modal").modal('show');
+            html2canvas(graph_condition_div, {
+                onrendered: function (graph_condition_canvas) {
+                    html2canvas(data_div, {
+                        onrendered: function (data_canvas) {
+                            var graph_condition_img = new Image;
+
+                            graph_condition_img.id = 'graph-condition-img';    /// give an id so we can remove it in next step
+                            graph_condition_img.src = graph_condition_canvas.toDataURL("image/png");
+                            graph_condition_img.className = 'canvas-image'
+
+                            var data_img = new Image;
+
+                            data_img.id = 'data-img';    /// give an id so we can remove it in next step
+                            data_img.src = data_canvas.toDataURL("image/png");
+                            data_img.className = 'canvas-image'
+
+                            var hide = $('<style>').html('body *:not(.canvas-image) { display: none !important; }').appendTo(document.head);
+                            document.body.appendChild(graph_condition_img);
+                            document.body.appendChild(data_img);
+
+                            window.print();
+                            $('#graph-condition-img').remove();
+                            $('#data-img').remove();
+                            $("#loading-modal").modal('hide');
+                            hide.remove();
+                        }
+                    });
+                }
+            });
+        }
     </script>
 }
