--- a/TMS/TMS/Areas/HelpDesk/Views/Shared/_Layout.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/Shared/_Layout.cshtml
@@ -158,6 +158,7 @@
                         </a>
                     </li>
                 </ul>
+            </section>
             <!-- /.sidebar -->
         </aside>
         <!-- Content Wrapper. Contains page content -->
@@ -185,7 +186,7 @@
             reserved.
         </footer>
     </div>
-<!-- ./wrapper -->
+    <!-- ./wrapper -->
     @RenderSection("InitModal", false)
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
