--- a/TMS/TMS/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -201,7 +201,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/app")
-    @Scripts.Render("~/bundles/jqueryval")
+    @*@Scripts.Render("~/bundles/jqueryval")*@
     @RenderSection("scripts", required: false)
     <script>
         $(document).ready(function () {
@@ -210,10 +210,10 @@
                 format: 'd/m/Y'
             });
             notifyFlashMessage();
-            $.validator.addMethod("date", function (value, element) {
-                Globalize.culture("en-GB");
-                return this.optional(element) || Globalize.parseDate(value) !== null;
-            });
+            //$.validator.addMethod("date", function (value, element) {
+            //    Globalize.culture("en-GB");
+            //    return this.optional(element) || Globalize.parseDate(value) !== null;
+            //});
         });
     </script>
 </body>
